# picochu

./: Dockerfile  README.md  README_JA.md
picoco_pkg_skelton/: CMakeLists.txt
picoco_pkg_skelton/src/: @{PACKAGE_NAME}_main.c
src/: picoco.py
src/picoco_commands/: picoco_build.py  picoco_create_pkg.py  picoco_subcommand.py.template
